--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "npm": "^5.3.0",
     "raphael": "^2.2.7",
     "csvtojson": "^1.1.9",
-    "highcharts": "^4.2.7",
-    "highcharts-map": "^0.1.2",
-    "highcharts-more": "^0.1.2",
+    "highcharts": "4.2.7",
+    "highcharts-map": "0.1.2",
+    "highcharts-more": "0.1.2",
     "lodash": "^4.17.4",
-    "ng2-highcharts": "^1.1.2",
+    "ng2-highcharts": "1.1.2",
     "sweetalert2": "^6.6.0",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.17"
