--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap3-wysihtml5-bower": "^0.3.3",
     "core-js": "^2.4.1",
+    "csvtojson": "^1.1.9",
     "daterangepicker": "^2.1.25",
     "font-awesome": "^4.7.0",
+    "highcharts": "4.2.7",
+    "highcharts-map": "0.1.2",
+    "highcharts-more": "0.1.2",
     "icheck": "^1.0.2",
     "install": "^0.10.1",
     "ionicons": "^3.0.0",
@@ -43,18 +47,15 @@
     "jquery-slimscroll": "^1.3.8",
     "jquery-sparkline": "^2.4.0",
     "jqueryui": "^1.11.1",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morris.js": "^0.5.0",
+    "ng2-highcharts": "1.1.2",
+    "ng4-loading-spinner": "^1.1.3",
     "npm": "^5.3.0",
     "raphael": "^2.2.7",
-    "csvtojson": "^1.1.9",
-    "highcharts": "4.2.7",
-    "highcharts-map": "0.1.2",
-    "highcharts-more": "0.1.2",
-    "lodash": "^4.17.4",
-    "ng2-highcharts": "1.1.2",
-    "sweetalert2": "^6.6.0",
     "rxjs": "^5.5.5",
+    "sweetalert2": "^6.6.0",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
