--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "moment": "^2.18.1",
     "morris.js": "^0.5.0",
     "ng2-highcharts": "1.1.2",
-    "ng4-loading-spinner": "^1.1.3",
+    "ng4-loading-spinner": "1.0.27",
     "npm": "^5.3.0",
     "raphael": "^2.2.7",
     "rxjs": "^5.5.5",
